# barcodes-php

./: Cargo.toml  README.md
.cargo/: config.toml
example/: test.php
src/: lib.rs
