[package]
name = "barcodes-php"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
phper = "0.4"

barcoders = {version = "1.0.2", features = ["image", "svg"]}

[dev-dependencies]
phper-test = "0.4"


[build-dependencies]
phper-build = "0.4"
